vlib/v/checker/tests/import_symbol_private_err.out
vlib/v/checker/tests/import_symbol_private_err.vv:13:6: notice: interface field `io.ReaderWriterImpl.r` must be initialized
   11 |         'h': 2
   12 |     }.exists('h')
   13 |     _ = ReaderWriterImpl{}
      |         ~~~~~~~~~~~~~~~~~~
   14 | }
vlib/v/checker/tests/import_symbol_private_err.vv:13:6: notice: interface field `io.ReaderWriterImpl.w` must be initialized
   11 |         'h': 2
   12 |     }.exists('h')
   13 |     _ = ReaderWriterImpl{}
      |         ~~~~~~~~~~~~~~~~~~
   14 | }
vlib/v/checker/tests/import_symbol_private_err.vv:3:15: error: module `time` function `vpc_now()` is private
    1 | import v.scanner
    2 | import v.parser
    3 | import time { vpc_now }
      |               ~~~~~~~
    4 | import io { ReaderWriterImpl }
    5 |
vlib/v/checker/tests/import_symbol_private_err.vv:4:13: error: module `io` type `ReaderWriterImpl` is private
    2 | import v.parser
    3 | import time { vpc_now }
    4 | import io { ReaderWriterImpl }
      |             ~~~~~~~~~~~~~~~~
    5 | 
    6 | fn main() {
vlib/v/checker/tests/import_symbol_private_err.vv:7:18: error: constant `v.scanner.single_quote` is private
    5 | 
    6 | fn main() {
    7 |     println(scanner.single_quote)
      |                     ~~~~~~~~~~~~
    8 |     println(parser.State.html)
    9 |     vpc_now()
vlib/v/checker/tests/import_symbol_private_err.vv:8:17: error: enum `v.parser.State` is private
    6 | fn main() {
    7 |     println(scanner.single_quote)
    8 |     println(parser.State.html)
      |                    ~~~~~~~~~~
    9 |     vpc_now()
   10 |     _ = {
vlib/v/checker/tests/import_symbol_private_err.vv:9:2: error: function `time.vpc_now` is private
    7 |     println(scanner.single_quote)
    8 |     println(parser.State.html)
    9 |     vpc_now()
      |     ~~~~~~~~~
   10 |     _ = {
   11 |         'h': 2
vlib/v/checker/tests/import_symbol_private_err.vv:12:4: error: method `map[string]int.exists` is private
   10 |     _ = {
   11 |         'h': 2
   12 |     }.exists('h')
      |       ~~~~~~~~~~~
   13 |     _ = ReaderWriterImpl{}
   14 | }
vlib/v/checker/tests/import_symbol_private_err.vv:13:6: error: struct `io.ReaderWriterImpl` was declared as private to module `io`, so it can not be used inside module `main`
   11 |         'h': 2
   12 |     }.exists('h')
   13 |     _ = ReaderWriterImpl{}
      |         ~~~~~~~~~~~~~~~~~~
   14 | }
