vlib/v/checker/tests/import_symbol_private_err.vv
import v.scanner
import v.parser
import time { vpc_now }
import io { ReaderWriterImpl }

fn main() {
	println(scanner.single_quote)
	println(parser.State.html)
	vpc_now()
	_ = {
		'h': 2
	}.exists('h')
	_ = ReaderWriterImpl{}
}
